--- a/myproject/templates/app/foodListmodal.html
+++ b/myproject/templates/app/foodListmodal.html
@@ -3,8 +3,8 @@
  <div class="modal fade" id="foodListmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
    <div class="modal-dialog">
      <div class="modal-content">
-       <div class="modal-header border-0 align-self-start">
-         <h5 class="modal-title" id="exampleModalLabel"></h5>
+       <div class="modal-header border-0 pb-0 align-self-center">
+         <h5 class="modal-title" id="exampleModalLabel">Edit Menus</h5>
        </div>
        <div class="modal-body">
          <div class="card pe-3 ps-3 pb-3" style="">
@@ -33,51 +33,7 @@
 
              {% endfor %}
 
-             {% comment %} <tr>
-               <td class="text-start ">Lasagna</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Spaghetti Bolognese</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Spaghetti Carbonara</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Spaghetti Squid Ink pasta seafood</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Burger2</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Lasagna2</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Spaghetti Bolognese2</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Spaghetti Carbonara2</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr>
-             <tr>
-               <td class="text-start ">Spaghetti Squid Ink pasta seafood2</td>
-               <td class="text-center "><a class="btn btn-sm btn-danger" data-bs-target="#DeletingfoodListmodal"
-                   data-bs-toggle="modal" data-bs-dismiss="modal">Delete</a></td>
-             </tr> {% endcomment %}
+
 
            </table>
            <button class="btn btn-primary" type="button" data-bs-target="#AddingfoodListmodal" data-bs-toggle="modal"
@@ -99,8 +55,8 @@
  <div class="modal fade " id="AddingfoodListmodal" tabindex="-1" aria-labelledby="exampleModalLabe2" aria-hidden="true">
    <div class="modal-dialog modal-dialog-centered">
      <div class="modal-content ">
-       <div class="modal-header border-0 align-self-start">
-         <h5 class="modal-title" id="exampleModalLabe2"></h5>
+       <div class="modal-header pb-0 border-0 align-self-center">
+         <h5 class="modal-title" id="exampleModalLabe2">Add Menus</h5>
        </div>
        <div class="modal-body">
          <div class="card p-3" style="">
@@ -114,36 +70,7 @@
                    aria-describedby="inputGroup-sizing-sm"></td>
                <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
              </tr>
-             <tr id="container">
-               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-sm"></td>
-               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
-             </tr>
-             <tr id="container">
-               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-sm"></td>
-               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
-             </tr>
-             <tr id="container">
-               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-sm"></td>
-               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
-             </tr>
-             <tr id="container">
-               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-sm"></td>
-               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
-             </tr>
-             <tr id="container">
-               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-sm"></td>
-               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
-             </tr>
-             <tr id="container">
-               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-sm"></td>
-               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
-             </tr>
+
            </table>
 
 
@@ -166,8 +93,8 @@
    aria-hidden="true">
    <div class="modal-dialog modal-dialog-centered">
      <div class="modal-content ">
-       <div class="modal-header border-0 align-self-start">
-         <h5 class="modal-title" id="exampleModalLabe3"></h5>
+       <div class="modal-header pb-0 border-0 align-self-center">
+         <h5 class="modal-title" id="exampleModalLabe3">Delete Confirmation</h5>
        </div>
        <div class="modal-body">
          <h5>Are you sure you wat to delete Menu:{{menu.menuNameEN}} ?</h5>
