--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -1,60 +1,58 @@
 {% extends 'app/base.html' %}
 {% load static %}
-{% block content %} {% comment %}
+{% block content %}
 <div class="row justify-content-center">
-  {% endcomment %}
-  <div class="row justify-content-center">
-    <div class="col-xl-8">
-      <div class="card p-3" style="">
-        <div class="row">
-          <img src="{% static 'images/foodEx.jpg' %}" class="imgBg" alt="Responsive image" />
-          <img src="{% static 'images/foodEx2.jpg' %}" class="imgCollab" alt="Responsive image" />
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <div class="card-body">
-              <h2 class="card-title">{{restaurant.resNameTH}}</h2>
-              <p class="card-text">{{restaurant.categoryID.categoryName}}</p>
-              <p class="card-text">
-                <i class="fas fa-star text-warning"></i>
-                <span> 4.2</span>
-                <i class="far fa-clock text-secondary"></i>
-                <span> 15 min</span>
-                <i class="fas fa-map-marker-alt text-secondary"></i>
-                <span> 2 km</span>
-              </p>
-              <p class="card-text">Openning Hours: 11:00 AM. - 22:00 PM.</p>
-            </div>
+  <div class="col-xl-8">
+    <div class="card p-3" style="">
+      <div class="row">
+        <img src="{{restaurant.coverPic.url}}" class="imgBg" alt="Responsive image" />
+        <img src="{{restaurant.profilePic.url}}" class="imgCollab" alt="Responsive image" />
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <div class="card-body">
+            <h2 class="card-title">{{restaurant.resName}}</h2>
+            <p class="card-text">{{restaurant.categoryID.categoryName}}</p>
+            <p class="card-text">
+              <i class="fas fa-star text-warning"></i>
+              <span> 4.2</span>
+              <i class="far fa-clock text-secondary"></i>
+              <span> 15 min</span>
+              <i class="fas fa-map-marker-alt text-secondary"></i>
+              <span> 2 km</span>
+            </p>
+            <p class="card-text">Openning Hours: 11:00 AM. - 22:00 PM.</p>
           </div>
-          <div class="col-6 align-self-end">
-            <div class="text-end card-body">
-              <p class="card-text">
-                <i class="fas fa-users"></i>
-                <span class="">15 Queue</span>
-              </p>
-              <p class="card-text">
-                <i class="fas fa-hourglass-start"></i>
-                <span class="card-text">8 Mins.</span>
-              </p>
-              <p class="card-text">
-                <a href="{% url 'foodList' restaurant.resID %}">
-                  <button type="button" class="btn btn-primary btn-sm">
-                    รายการอาหาร
-                  </button>
-                </a>
-                <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal"
-                  data-bs-target="#exampleModal">
-                  จองคิว
+        </div>
+        <div class="col-6 align-self-end">
+          <div class="text-end card-body">
+            <p class="card-text">
+              <i class="fas fa-users"></i>
+              <span class="">15 Queue</span>
+            </p>
+            <p class="card-text">
+              <i class="fas fa-hourglass-start"></i>
+              <span class="card-text">8 Mins.</span>
+            </p>
+            <p class="card-text">
+              <a href="{% url 'foodList' restaurant.resID %}">
+                <button type="button" class="btn btn-primary btn-sm">
+                  รายการอาหาร
                 </button>
-              </p>
-            </div>
+              </a>
+              <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
+                จองคิว
+              </button>
+            </p>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  {% include 'app/modal.html' with restaurant=restaurant %}
-  {% include 'app/map.html' with restaurant=restaurant %}
-  {% endblock content %}
+{% include 'app/modalResCard.html' with restaurant=restaurant %}
+{% include 'app/map.html' with restaurant=restaurant %}
+{% endblock content %}
 </div>
