--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -1,4 +1,5 @@
 {% extends 'app/base.html' %}
+{% block title %}Home{% endblock title %}
 {% block content %}
 <div class="input-group rounded-lg mt-2">
     <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
