--- a/myproject/templates/app/workerProfile.html
+++ b/myproject/templates/app/workerProfile.html
@@ -15,9 +15,9 @@
         <div class="row">
             <div class="col-md">
                 <div class="profile-work">
-                    <p>Company / Store</p>
+                    <p>Company / Restaurant</p>
                     <a href="">Detail</a><br />
-                    <a href="">Start my own</a><br />
+                    <a href="{% static 'app/modalBusiness.html' %}" data-bs-toggle="modal" data-bs-target="#business">Start my own</a><br />
                 </div>
             </div>
         </div>
@@ -196,5 +196,6 @@
 </div>
 
 
-{% include 'app/modal_editProfile.html' %}
+{% include 'app/modalStartBusiness.html' %}
+{% include 'app/modalEditProfile.html' %}
 {% endblock content %}
