--- a/myproject/templates/app/card3Col.html
+++ b/myproject/templates/app/card3Col.html
@@ -10,7 +10,7 @@
         </div>
         <div class="mt-2">
             <div class="card-body d-flex flex-column">
-                <h4 class="card-title">{{restaurant.resNameTH}}</h4>
+                <h4 class="card-title">{{restaurant.resName}}</h4>
                 <p class="card-text mt-auto">{{restaurant.categoryID.categoryName}}</p>
                 <p class="card-text ">
                     <i class="fas fa-star text-warning"></i>
