--- a/myproject/templates/app/foodList.html
+++ b/myproject/templates/app/foodList.html
@@ -7,7 +7,7 @@
     <div class="card h-100">
       <img src="{{menu.picture.url}}" class="card-img-top" style="height:50%;">
       <div class="card-body d-flex flex-column">
-        <h5 class="card-title">{{menu.menuNameEN}}</h5>
+        <h5 class="card-title">{{menu.menuName}}</h5>
         <p class="card-text">
           {{menu.description}}
         </p>
@@ -37,4 +37,5 @@
     </div>
   </div>
   {% include 'app/foodListmodal.html' with menus=menus %}
+  
   {% endblock content %}
