--- a/myproject/templates/app/categoryCard.html
+++ b/myproject/templates/app/categoryCard.html
@@ -1,11 +1,14 @@
 {% load static %}
 {% block content %}
 <div class="col">
-    <div class="card p-2 border-0 text-white ">
+    <div id="{{category.fullCate}}" class="card p-2 border-0 text-white category-title">
         <img src="{% static 'images/foodEx.jpg' %}" class="card-img catImg" style="filter: contrast(40%);">
         <div class="card-img-overlay ">
             <div class="d-flex align-items-center justify-content-center h-100">
-                <h2 class="text-center">{{category.categoryName}}</h2>
+                {% comment %} <a href="{% url 'category' category.categoryID %}"
+                    class="text-decoration-none text-reset"> {% endcomment %}
+                    <h2 id="" class="text-center ">{{category.categoryName}}</h2>
+                    {% comment %} </a> {% endcomment %}
             </div>
         </div>
     </div>
