--- a/myproject/templates/app/foodList.html
+++ b/myproject/templates/app/foodList.html
@@ -38,6 +38,7 @@
       <button type="button" class="btn btn-primary btn-lg">Submit</button>
     </div>
   </div>
-  {% include 'app/foodListmodal.html' with menus=menus %}
+</div>
+{% include 'app/foodListmodal.html' with menus=menus %}
 
-  {% endblock content %}
+{% endblock content %}
