--- a/myproject/templates/app/admin.html
+++ b/myproject/templates/app/admin.html
@@ -182,8 +182,8 @@
       </table>
     </div>
   </div>
-  <div class="row">
-    <a href="{%url 'usermanage'%}" class="btn btn-primary mt-4">Registration request</a>
+  <div class="row  justify-content-end">
+    <a href="{%url 'requestRegistration'%}" class="btn btn-warning mt-4" style="width : 30%">Registration request</a>
   </div>
 </div>
 
