--- a/myproject/templates/app/userProfile.html
+++ b/myproject/templates/app/userProfile.html
@@ -59,7 +59,7 @@
                 <div class="tab-pane fade show active pb-5" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>{{profile.memberID}}</p>
+                            <p>{{profile.id}}</p>
                         </div>
                     </div>
                     <div class="row">
