--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -18,11 +18,10 @@
   max-width: 330px;
 }
 .catImg {
-  border-radius: 24px;
-  max-height: 150px;
+  border-radius: 14px !important;
+  max-height: 130px;
   max-width: 200px;
 }
 img {
   object-fit: cover;
 }
-
